--- a/src/app/admin/features/vc/stc/chipid-model/chipid-model.component.html
+++ b/src/app/admin/features/vc/stc/chipid-model/chipid-model.component.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="col-12 col-md-8 input_box">
                             <input type="text" [value]="subLcoChipID" [(ngModel)]="subLcoChipID"
-                                (keypress)="onKeydown($event)">
+                                (keypress)="onKeydown1($event)">
                         </div>
                     </div>
                     <!-- </form> -->
