--- a/src/app/admin/features/channel_setting/Reports_page/Trai/broadcaster-reports/broadcaster-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/broadcaster-reports/broadcaster-reports.component.html
@@ -83,10 +83,10 @@
                                     {{ casItem.broadcastername }}
                                 </option>
                             </select>
-
+<!-- 
                             <div *ngIf="submitted && !broadcastername" class="text-danger" style="font-size: small;">
                                 Broadcaster is required
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div *ngIf="isVisible== false" class="input_box display1 mb-3">
