--- a/src/app/admin/features/channel_setting/_Dialogue/Inventory/allocated-inventory/allocated-inventory.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Inventory/allocated-inventory/allocated-inventory.component.html
@@ -10,12 +10,7 @@
                 <label for="">LCO Name</label>
             </div>
             <div class="col-12 col-md-6">
-                <!-- <select id="lcoName" [(ngModel)]="selectedLcoName">
-                    <option value="0" style="background: green;" selected>Select a LCO Name</option>
-                    <option *ngFor="let key of filteredLcoKeys()" [value]="lco_list[key]">
-                        {{ key }}
-                    </option>
-                </select> -->
+
                 <input type="text" matInput [matAutocomplete]="auto" [(ngModel)]="selectedLcoName" 
                     (input)="filterOperators($event)" placeholder="Select a Operator" [matAutocompleteDisabled]="false"
                     [value]="selectedOperator?.name">
@@ -38,7 +33,7 @@
             <div class="col-12 col-md-6">
                 <select id="casType" [(ngModel)]="selectedCasType" (change)="onCasChange()">
                     <option value="0" selected>Select a CAS Name</option>
-                    <option *ngFor="let key of castype" [value]="key.id">
+                    <option *ngFor="let key of castype" [value]="key.value">
                         {{ key.name }}
                     </option>
                 </select>
