--- a/src/app/admin/features/channel_setting/_Dialogue/package Creation/package-base-demo/package-base-demo.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/package Creation/package-base-demo/package-base-demo.component.html
@@ -35,21 +35,21 @@
             <h6>BASE DEMO PACK - {{dailogObj.type}}</h6>
             <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
         </div>
-        <div class="display" style="padding: 1rem;max-height: 70vh;overflow: auto;">
+        <div class="" style="padding: 1rem;height: 100%;overflow-x:hidden;overflow-y: scroll;">
 
-            <div class="col-12 col-md-6 mb-3">
+            <div class="col-12 col-md-12 mb-3">
                 <h4>Pair List</h4>
-                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='autoHeight'
+                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;height: 80%;" domLayout='autoHeight'
                     class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
                     [columnDefs]="columnDefs" [rowData]="rowData" [enableCellTextSelection]="true">
                 </ag-grid-angular>
             </div>
-            &nbsp;
-            <div class="col-12 col-md-6">
+       
+            <div class="col-12 col-md-12">
                 <h4>UnPair List</h4>
-                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='autoHeight'
+                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;height: 80%;" domLayout='autoHeight'
                     class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
-                    [columnDefs]="columnDefs" [rowData]="rowDataUnpair" [enableCellTextSelection]="true">
+                    [columnDefs]="columnDefs1" [rowData]="rowDataUnpair" [enableCellTextSelection]="true">
                 </ag-grid-angular>
             </div>
         </div>
@@ -57,27 +57,25 @@
 </div>
 
 <div *ngIf="dailogObj.type==='addonpair'">
-
     <div class="col d-block justify-content-center align-items-center">
         <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
             <h6>BASE DEMO PACK - {{dailogObj.type}}</h6>
             <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
         </div>
-        <div class="display" style="padding: 1rem;max-height: 70vh;overflow: auto;">
-
-            <div class="col-12 col-md-6 mb-3 mx-3">
+        <div class="" style="padding: 1rem;height: 100%;overflow-x:hidden;overflow-y: scroll;">
+            <div class="col-12 col-md-12 mb-3 mx-3">
                 <h4>Pair List</h4>
-                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='autoHeight'
+                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;height: 80%;" domLayout='autoHeight'
                     class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
                     [columnDefs]="columnDefs" [rowData]="rowData" [enableCellTextSelection]="true">
                 </ag-grid-angular>
             </div>
 
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-12">
                 <h4>UnPair List</h4>
-                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='autoHeight'
+                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;height: 80%;" domLayout='autoHeight'
                     class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
-                    [columnDefs]="columnDefs" [rowData]="rowDataUnpair" [enableCellTextSelection]="true">
+                    [columnDefs]="columnDefs1" [rowData]="rowDataUnpair" [enableCellTextSelection]="true">
                 </ag-grid-angular>
             </div>
         </div>
