--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -709,7 +709,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="input_box  mb-3">
+                                        <div  class="input_box  mb-3">
                                             <div class="d-flex align-items-center justify-content-center">
                                                 <div class="col-6 col-md-6">
                                                     <span class="me-2">Customer Amount</span>
@@ -777,7 +777,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div *ngIf="role !='ROLE_OPERATOR' ||  role !='ROLE_SUBLCO'" class="mb-3">
+                                        <div  *ngIf="role !== 'ROLE_OPERATOR' && role !== 'ROLE_SUBLCO'"  class="mb-3">
                                             <div class="d-flex align-items-center justify-content-center">
                                                 <div class="input_box col-6 col-md-6">
                                                     <span class="me-2">Customer pay </span>
